Update website with professional email and social media integration
- Updated email address to info@amissolidairesgatineau.org across all pages
- Added social media links (Facebook, Instagram, Twitter/X) to all footers
- Implemented EmailJS contact form integration with fallback
- Updated mission section image to use logo
- Added mobile-responsive styling for mission image
- Removed template attribution from footers
- Created EmailJS setup documentation

Pages updated:
- All main pages (index, contact, about, blog, donate)
- All individual blog post pages
- Contact form functionality enhanced
- Mobile optimization improvements

--- a/blog-homeless-meals.html
+++ b/blog-homeless-meals.html
@@ -274,9 +274,9 @@
               <h2 class="ftco-heading-2">LES AMIS SOLIDAIRES</h2>
               <p>Building stronger communities through compassionate support for immigrants, cancer patients, and homeless individuals across Canada.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://x.com/AmisSolidaires?t=fb-ymJPPUas0TwsJhrXqZg&s=08" target="_blank"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=61583019626855&mibextid=rS40aB7S9Ucbxw6v" target="_blank"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/amissolidaires?igsh=MTNhajV6MHhhYzMxbg==" target="_blank"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -313,7 +313,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text" data-translate="contact.address_text">Gatineau, Quebec, Canada</span></li>
 	                <li><a href="tel:+18193196979"><span class="icon icon-phone"></span><span class="text" data-translate="contact.phone_text">+1 (819) 319-6979</span></a></li>
-	                <li><a href="mailto:contact@amissolidaires-gatineau.ca"><span class="icon icon-envelope"></span><span class="text" data-translate="contact.email_text">contact@amissolidaires-gatineau.ca</span></a></li>
+	                <li><a href="mailto:info@amissolidairesgatineau.org"><span class="icon icon-envelope"></span><span class="text" data-translate="contact.email_text">info@amissolidairesgatineau.org</span></a></li>
 	              </ul>
 	            </div>
             </div>
