--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
               <div class="icon mb-3"><span class="flaticon-charity"></span></div>
               <div class="text">
                 <h4 data-translate="contact.email_title">Email Us</h4>
-                <p><a href="mailto:contact@amissolidaires-gatineau.ca">contact@amissolidaires-gatineau.ca</a></p>
+                <p><a href="mailto:info@amissolidairesgatineau.org">info@amissolidairesgatineau.org</a></p>
                 <p><small data-translate="contact.email_response">We respond within 24 hours</small></p>
               </div>
             </div>
@@ -224,9 +224,9 @@
               <h2 class="ftco-heading-2">About Us</h2>
               <p>LES AMIS SOLIDAIRES DE GATINEAU is a community-focused association dedicated to mutual aid, solidarity, and social progress in the Gatineau region since December 2023.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://x.com/AmisSolidaires?t=fb-ymJPPUas0TwsJhrXqZg&s=08" target="_blank"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=61583019626855&mibextid=rS40aB7S9Ucbxw6v" target="_blank"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/amissolidaires?igsh=MTNhajV6MHhhYzMxbg==" target="_blank"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -276,7 +276,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Gatineau, Quebec, Canada</span></li>
 	                <li><a href="tel:+1-819-319-6979"><span class="icon icon-phone"></span><span class="text">+1 (819) 319-6979</span></a></li>
-	                <li><a href="mailto:contact@amissolidaires-gatineau.ca"><span class="icon icon-envelope"></span><span class="text">contact@amissolidaires-gatineau.ca</span></a></li>
+	                <li><a href="mailto:info@amissolidairesgatineau.org"><span class="icon icon-envelope"></span><span class="text">info@amissolidairesgatineau.org</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -285,7 +285,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by <a href="https://github.com/chamkang" target="_blank">ChamTech</a> | Template by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by LES AMIS SOLIDAIRES DE GATINEAU</p>
           </div>
         </div>
       </div>
@@ -313,6 +313,8 @@
   <script src="js/scrollax.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/translator.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script src="js/contact-form.js"></script>
     
   </body>
 </html>
