--- a/about.html
+++ b/about.html
@@ -301,9 +301,9 @@
               <h2 class="ftco-heading-2" data-translate="footer.about_title">About Us</h2>
               <p data-translate="footer.about_text">LES AMIS SOLIDAIRES DE GATINEAU is a community-focused association dedicated to mutual aid, solidarity, and social progress in the Gatineau region since December 2023.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://x.com/AmisSolidaires?t=fb-ymJPPUas0TwsJhrXqZg&s=08" target="_blank"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=61583019626855&mibextid=rS40aB7S9Ucbxw6v" target="_blank"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/amissolidaires?igsh=MTNhajV6MHhhYzMxbg==" target="_blank"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -353,7 +353,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text" data-translate="contact.address_text">Gatineau, Quebec, Canada</span></li>
 	                <li><a href="tel:+18193196979"><span class="icon icon-phone"></span><span class="text" data-translate="contact.phone_text">+1 (819) 319-6979</span></a></li>
-	                <li><a href="mailto:contact@amissolidaires-gatineau.ca"><span class="icon icon-envelope"></span><span class="text" data-translate="contact.email_text">contact@amissolidaires-gatineau.ca</span></a></li>
+	                <li><a href="mailto:info@amissolidairesgatineau.org"><span class="icon icon-envelope"></span><span class="text" data-translate="contact.email_text">info@amissolidairesgatineau.org</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -362,7 +362,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p><span data-translate="footer.copyright">Copyright</span> &copy;<script>document.write(new Date().getFullYear());</script> <span data-translate="footer.all_rights_reserved">All rights reserved by</span> LES AMIS SOLIDAIRES DE GATINEAU | <span data-translate="footer.template_by">Template by</span> <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+            <p><span data-translate="footer.copyright">Copyright</span> &copy;<script>document.write(new Date().getFullYear());</script> <span data-translate="footer.all_rights_reserved">All rights reserved by</span> LES AMIS SOLIDAIRES DE GATINEAU</p>
           </div>
         </div>
       </div>
